--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<h1>Watch this space</h1>
-<p>more to come!</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>RogueM GitHub Xtravaganza by RogueM</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">RogueM GitHub Xtravaganza</h1>
+        <p class="header"></p>
+
+
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/RogueM">GitHub Profile</a></li>
+        </ul>
+
+      </header>
+      <section>
+        <h3>
+<a id="its-a-new-era" class="anchor" href="#its-a-new-era" aria-hidden="true"><span class="octicon octicon-link"></span></a>It's a new era</h3>
+
+<p>.md my words!</p>
+      </section>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
+  </body>
 </html>
