--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>RogueM GitHub Xtravaganza by RogueM</title>
+    <title>RogueM GitHub by RogueM</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">RogueM GitHub Xtravaganza</h1>
+        <h1 class="header">RogueM GitHub</h1>
         <p class="header"></p>
 
 
