test GIthub client app

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a id="its-a-new-era" class="anchor" href="#its-a-new-era" aria-hidden="true"><span class="octicon octicon-link"></span></a>It's a new era</h3>
 
-<p>.md my words!</p>
+<p>.md my word!</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
